PN-244: add deanonimization to search notification metadata